--- a/.gitignore
+++ b/.gitignore
@@ -19,14 +19,14 @@
 # misc
 .DS_Store
 *.pem
-
+ d
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
-.env*.local
+# env files
+.env
 
 # vercel
 .vercel
